# CodeSem

./: Dockerfile  README.md
CodePredictor/CodeBERT/: bert_config.json  test_measure_for_alias.py  test_measure_for_equiv.py
CodePredictor/CuBERT/: create_pretraining_data.py  optimization.py  run_pretraining.py  run_tokenized_def_cross_entropy.py  run_tokenized_function_cross_entropy.py
CodePredictor/GGNN/: requirements.txt
CodePredictor/GGNN/ggnn_for_alias/: BaseGGNNDef.py  GGNNDef.py  (+1 more)
datasets/: README.md
datasets/alias-datasets-processed/: README.md  README_csv.md  gcc_output.csv  linux_output.csv  mysql_output.csv
datasets/alias-datasets-raw/: gcc-cpp-alias-new.xlsx  gcc-cpp-alias.xlsx  linux-alias.xlsx  mysql-alias.xlsx
datasets/equivalence_prediction/: README.md
datasets/functionally-equiv-compilable/: README.md
models/CodeBERT/: README.md  codebert-pre-training.py  modeling.py  run_tokenized_def_use_cross_entropy.py  run_tokenized_def_use_cross_entropy_anonymous.py
models/CuBERT/: README.md  bert_config.json  run_pretraining.py  run_tokenized_def_contrastive_loss.py  run_tokenized_def_cross_entropy.py  run_tokenized_def_cross_entropy_anonymous.py  run_tokenized_def_use_cross_entropy.py  run_tokenized_function_contrastive_loss.py  run_tokenized_function_cross_entropy.py  test_measure_for_equiv.py  tokenization.py
models/cubert/: README.txt  bert_config.json  c_tokenizer.py  code_to_subtokenized_sentences.py  cubert_io.ipynb  cubert_pretraining_data.ipynb  cubert_tokenized_pretraining_data.ipynb  input_io.ipynb  java_tokenizer.py  modeling.py  path_tsv.ipynb  run_cubert_alias.ipynb  run_cubert_def_use.ipynb  run_cubert_def_use.py  run_cubert_function.ipynb  run_cubert_function.py  run_tokenized_def_use.ipynb  run_tokenized_def_use_contrastive_loss.py  test_measure.py  tokenizer_registry.py
scripts/: README.md
scripts/AST2Graph/: README.md
scripts/graph/Part3_Match_alias_2_node/Alias2Node_ast/tools/AST2Graph/: CMakeLists.txt  main.cpp
scripts/tokens/: README.md
scripts/tokens/AliasFinder/: .gitignore  .wget-hsts  CMakeLists.txt  README.md  build.sh
scripts/tokens/AliasFinder/benchmark/: README.md  genastcmd.py
scripts/tokens/AliasFinder/docs/: ArrayBoundChecker.md  CONTRIBUTING.md  Config.md  Field-Sensitive_Taint_Checker.md  Framework.md  LoopUpbound.md  RedundantJudgement.md  Structure.md  Z3Solver.md
scripts/tokens/AliasFinder/include/CFG/: README.md
scripts/tokens/AliasFinder/include/P2A/: PointToAnalysis.h  README.md
scripts/tokens/AliasFinder/include/Stat/: AliasStat.h  CFGStat.h  FileParser.h  MyStmt.h  Util.h
scripts/tokens/AliasFinder/include/checkers/: TemplateChecker.h
scripts/tokens/AliasFinder/include/checkers/arraybound/: ArrayBoundChecker.h  ArrayInformation.h  ClangZ3Common.h  CommonFunctions.h
scripts/tokens/AliasFinder/include/checkers/loopupbound/: LoopUpbound.h
scripts/tokens/AliasFinder/include/checkers/redundantjudgement/: RedundantJudgement.h
scripts/tokens/AliasFinder/include/framework/: ASTElement.h  ASTManager.h  BasicChecker.h  CallGraph.h  Common.h  Config.h  Diagnostic.h  DiagnosticManager.h
scripts/tokens/AliasFinder/include/solver/: Z3Coding.h
scripts/tokens/AliasFinder/include/taint-check/: FunctionEnv.h  TaintChecker.h  TaintEnv.h  TaintInterface.h  TaintManager.h  TaintValue.h
scripts/tokens/AliasFinder/include/utils/: FieldVariableInfo.h
scripts/tokens/AliasFinder/lib/: CMakeLists.txt
scripts/tokens/AliasFinder/lib/P2A/: CMakeLists.txt  PointToAnalysis.cpp  PointToAnalysisAlg.cpp
scripts/tokens/AliasFinder/lib/Stat/: CFGStat.cpp  CMakeLists.txt
scripts/tokens/AliasFinder/lib/checkers/: CMakeLists.txt  TemplateChecker.cpp
scripts/tokens/AliasFinder/lib/checkers/arraybound/: ArrayBoundChecker.cpp  CMakeLists.txt  ClangZ3Common.cpp  CommonFunctions.cpp  readme.txt
scripts/tokens/AliasFinder/lib/checkers/loopupbound/: CMakeLists.txt  LoopUpbound.cpp
scripts/tokens/AliasFinder/lib/checkers/redundantjudgement/: CMakeLists.txt  RedundantJudgement.cpp
scripts/tokens/AliasFinder/lib/framework/: ASTManager.cpp  BasicChecker.cpp  CallGraph.cpp  Common.cpp  Config.cpp  DiagnosticManager.cpp  Logger.cpp
scripts/tokens/AliasFinder/lib/solver/: CMakeLists.txt  Z3Coding.cpp  readme.txt
scripts/tokens/AliasFinder/lib/taint-check/: CMakeLists.txt  FunctionEnv.cpp  TaintChecker.cpp  TaintEnv.cpp  TaintInterface.cpp  TaintManager.cpp  TaintValue.cpp
scripts/tokens/AliasFinder/lib/xml/: CMakeLists.txt  pugixml.cpp
scripts/tokens/AliasFinder/tools/: CMakeLists.txt
scripts/tokens/AliasFinder/tools/AliasFinder/: CMakeLists.txt  main.cpp
scripts/tokens/AliasFinder/tools/TemplateChecker/: CMakeLists.txt  main.cpp
(+45362 files in other folders)
